# openproof-ml

./: Makefile  README.md  pyproject.toml
configs/: codex_expert_play.yaml  sft_qwen35_2b.yaml
scripts/: batch_codex_search.sh  download_processed.py  expert_play_codex.py  extract_tactics.py  pantograph-v4.28.0.patch  setup_lean_project.sh  verify_pairs.py
src/openproof_ml/search/: codex_cli.py  pantograph_client.py
src/openproof_ml/training/: sft.py
tests/: test_codex_cli.py
